# MyPhotos

./: .gitignore  README.md
source/: .editorconfig  CMakeLists.txt  main.cpp
source/Core/: CMakeLists.txt  CoreRegister.h  MPApplication.cpp  MPApplication.h  MPConfig.cpp  MPConfig.h  MPCore.cpp  MPCore.h  MPCoreDef.h
source/DataAccess/: CMakeLists.txt  DataAccessDef.cpp  DataAccessDef.h  DataAccessRegister.h  FileInfoAccess.cpp  FileInfoAccess.h  FileInfoConnection.cpp  FileInfoConnection.h
source/Manager/: CMakeLists.txt  FileManager.cpp  FileManager.h  ManagerRegister.h
source/QML/: CMakeLists.txt  Main.qml
source/Resource/: mp_icon.rc
